force-app/main/default/objects/inventory__c/inventory__c.object-meta.xml
<CustomObject>
    <description>this obejct will keep track of all the inventories.</description>
    <label>inventory</label>
    <nameField>
        <label>inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>