force-app/main/default/objects/inventory__c/fields/Available_quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_quantity__c</fullName>
    <description>this field will store the available stock details</description>
    <label>Available quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>