force-app/main/default/objects/inventory__c/fields/Reserved_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Quantity__c</fullName>
    <description>this will keep details of reserved stock</description>
    <label>Reserved Quantity</label>
    <length>12</length>
    <type>Text</type>
</CustomField>