force-app/main/default/objects/inventory__c/validationRules/available_stock_value.validationRule-meta.xml
<ValidationRule>
    <fullName>available_stock_value</fullName>
    <active>true</active>
    <description>the stock values must be proper</description>
    <errorConditionFormula>Available_quantity__c &lt; 0 &amp;&amp; ISBLANK (Available_quantity__c)</errorConditionFormula>
    <errorDisplayField>Available_quantity__c</errorDisplayField>
    <errorMessage>Please enter the valid quantity</errorMessage>
</ValidationRule>